--- a/css/layout.css
+++ b/css/layout.css
@@ -1,5 +1,81 @@
+
+@font-face {
+    font-family: TheMixBlack-Plain;
+    src: url('/assets/font/TheMixSemiBold-Plain.otf');
+}
+@font-face {
+    font-family: TheMixBlack-Caps;
+    src: url("/assets/font/TheMixBlack-Caps.otf");
+}
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    letter-spacing: 2px;   
+    text-transform: uppercase;
+    font-family: TheMixBlack-Plain;
+}
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-around ;
+    height: 80px;
+    background-color: #0000009f;
+    color: white;
+    padding-inline: 20em;
+    font-size: 13.6px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+.nav-titles{
+    display: flex;
+    align-items: center;
+}
+
+nav ul{
+    list-style: none;
+    display: flex;
+}
+.nav-titles li{
+    padding: 0.5em 1.1em;
+    transition: all 0.4s ease-in;
+    border-radius: 5px;
+}
+.nav-titles li:hover{
+    background-color: rgba(255, 255, 255, 0.301) ;
+}
+button{
+    background-color: #0078be;
+    padding: 0.5em 1.5em;
+    color: white;
+    border: none;
+    border-radius: 30px;
+    margin-left: 1.5em;
+    cursor: pointer;
+    transition: all 0.1s ease-in;
+}
+button:hover{
+    scale: 1.03;
+}
+a{
+    text-decoration: none;
+    color: white;
+}
+.nav-logo img{
+    object-fit: contain;
+}
+.hero{
+    background-image: url('/assets/hero-image.jpg');
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.hero>h1{
+    color: white;
+    font-family: "TheMixBlack-Caps";
+    font-size:2.5em;
 }
