--- a/css/layout.css
+++ b/css/layout.css
@@ -24,7 +24,7 @@ nav{
     color: white;
     padding-inline: 20em;
     font-size: 13.6px;
-    position: absolute;
+    position: sticky;
     top: 0;
     left: 0;
     right: 0;
@@ -78,4 +78,37 @@ a{
     color: white;
     font-family: "TheMixBlack-Caps";
     font-size:2.5em;
+}
+.foundations-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2em 1em ;
+    gap: 2em;
+}
+.foundations-section >h2{
+    font-family: TheMixBlack-Caps;
+    font-size: 32px;
+}
+.cards-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1em;
+    background-color: white;
+    height: 400px;
+    width: 350px;
+    
+}
+.card p{
+    text-align: center;
+    text-transform: none;
+    color: #0000009f;
 }
