--- a/css/layout.css
+++ b/css/layout.css
@@ -84,10 +84,10 @@ a{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 2em 1em ;
+    padding: 2em ;
     gap: 2em;
 }
-.foundations-section >h2{
+h2{
     font-family: TheMixBlack-Caps;
     font-size: 32px;
 }
@@ -107,8 +107,25 @@ a{
     width: 350px;
     
 }
+.card h2{
+    font-size: 20px;
+}
 .card p{
     text-align: center;
     text-transform: none;
     color: #0000009f;
+}
+.explore-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2em;
+    background-image: url('/assets/vision-section/drone-shot.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
+.explore-section h2{
+    color: white;
+    margin-bottom: 1em;
 }
