--- a/css/layout.css
+++ b/css/layout.css
@@ -191,3 +191,30 @@ h2{
 .install-container img{
     display: block;
 }
+.hub-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url('/assets/hub-section/bg.jpeg');
+    background-size:cover ;
+    background-repeat: no-repeat;
+    padding: 1em;
+}
+.hub-section>div{
+    margin: 2em;
+    display: flex;
+    gap:10em
+}
+.hub-section>div>div{
+    display: flex;
+   flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.hub-section img{
+    display: block;
+}
+.hub-section p{
+    font-size: 16px;
+}
