--- a/css/layout.css
+++ b/css/layout.css
@@ -218,3 +218,49 @@ h2{
 .hub-section p{
     font-size: 16px;
 }
+.trending-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2em;
+    background-color:#f5f5f5 ;
+
+}
+.trending-section img{
+    display: block;
+}
+.trending-section>div{
+    margin-top: 2em;
+    display: flex;
+    gap: 10em;
+}
+.trending-section>div>div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 345px;
+    background-color: white;
+    padding-top: 1.1em;
+}
+.trending-section h1{
+    margin-top: 1em;
+    font-size: 18px;
+    text-align: start;
+    padding-inline: 2em;
+}
+.trending-section p{
+    font-size: 12px ;
+}
+hr{
+    height: 2px;
+    width: 100%;
+    margin:1em 0;
+}
+.trending-section>div>div>div{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 300px;
+    background-color: white;
+    margin-bottom: 1em;
+}
