--- a/css/layout.css
+++ b/css/layout.css
@@ -1,43 +1,9 @@
-
-@font-face {
-    font-family: TheMixBlack-Plain;
-    src: url('/assets/font/TheMixSemiBold-Plain.otf');
-}
-@font-face {
-    font-family: TheMixBlack-Caps;
-    src: url("/assets/font/TheMixBlack-Caps.otf");
-}
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    letter-spacing: 2px;   
-    text-transform: uppercase;
-    font-family: TheMixBlack-Plain;
-}
-nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-around ;
-    height: 80px;
-    background-color: #0000009f;
-    color: white;
-    padding-inline: 20em;
-    font-size: 13.6px;
-    position: sticky;
-    top: 0;
-    left: 0;
-    right: 0;
-}
 .nav-titles{
     display: flex;
     align-items: center;
 }
 
-nav ul{
-    list-style: none;
-    display: flex;
-}
+
 .nav-titles li{
     padding: 0.5em 1.1em;
     transition: all 0.4s ease-in;
@@ -46,23 +12,7 @@ nav ul{
 .nav-titles li:hover{
     background-color: rgba(255, 255, 255, 0.301) ;
 }
-button{
-    background-color: #0078be;
-    padding: 0.5em 1.5em;
-    color: white;
-    border: none;
-    border-radius: 30px;
-    margin-left: 1.5em;
-    cursor: pointer;
-    transition: all 0.1s ease-in;
-}
-button:hover{
-    scale: 1.03;
-}
-a{
-    text-decoration: none;
-    color: white;
-}
+
 .nav-logo img{
     object-fit: contain;
 }
@@ -86,10 +36,8 @@ a{
     justify-content: center;
     padding: 2em ;
     gap: 2em;
-}
-h2{
-    font-family: TheMixBlack-Caps;
-    font-size: 32px;
+    background-color: #f5f5f5;
+
 }
 .cards-container{
     display: flex;
@@ -280,11 +228,7 @@ h2{
 .trending-section button{
     padding: 1em 2em;
 }
-hr{
-    height: 2px;
-    width: 100%;
-    margin:1em 0;
-}
+
 .trending-section>div>div>div{
     display: flex;
     flex-direction: column;
@@ -325,19 +269,8 @@ hr{
 .testi-inner:hover .back-face{
     z-index: 1;
 }
-footer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color:#212121 ;
-    color: white;
-    padding:2em 20em;
-}
-footer>div{ 
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
+
+
 .footer-main-section{
     gap: 10em;
 
