move a css class from blog style to layout style

--- a/css/layout.css
+++ b/css/layout.css
@@ -18,7 +18,11 @@
 }
 
 
-
+.hero-extra{
+    height: 40vh;
+    background-image: url('/assets/blog-page/hero.png');
+    background-position: center;
+}
 .footer-main-section{
     gap: 10em;
 
