--- a/css/Pages/career.css
+++ b/css/Pages/career.css
@@ -52,3 +52,40 @@
 .headline p{
     text-align: center;
 }
+.internship-section{
+    display: flex;
+    
+    height: 500px;
+}
+.internship-section img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.internship-section>div{
+    width: 50%;
+}
+.internship-content{
+    background-color: #f5f5f5;
+    padding: 3em 7em;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+.internship-content>div{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    width: 50%;
+}
+.internship-content>div>ul{
+    padding: 0 1em;
+}
+.internship-content>div>button{
+    width: 60%;
+    margin: 0;
+    padding: 1em 0;
+}
+span{
+    color: #477abe;
+}
