--- a/css/Pages/career.css
+++ b/css/Pages/career.css
@@ -89,3 +89,22 @@
 span{
     color: #477abe;
 }
+.testi-section{
+    display: flex;
+    background-color: #f5f5f5;
+}
+.quote{
+    padding: 2em;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1em;
+}
+em{
+    text-transform: uppercase;
+
+}
+.testi-img{
+    width: 50%;
+}
